--- a/use.html
+++ b/use.html
@@ -5,8 +5,8 @@
 <body>
   <style>
     #main {
-      width: 600px;
-      height: 600px;
+      width: 585px;
+      height: 485px;
       border: 1px solid blue;
       margin: 50px;
     }
@@ -18,31 +18,34 @@
     }
   </style>
   <svg id="main">
-    <g id="origin" transform="translate(300, 300)">
+    <g transform="translate(385, 385)">
+      <g id="o" transform="scale(1 1)"></g>
     </g>
   </svg>
-  <button id="update">Update</button>
-  <button id="reset">Reset</button>
   <script>
-  origin = d3.select("#origin");
   function reset() {
-    x=50, y=0, id=0;
-    origin.node().innerHTML = '<path id="0" d="M 0 0 L ' + x + ' 0" />';
+    o = d3.select("#o"),x=9, y=0, id=-1, c=0.8, s=c, d=200, ds=1.2;
+    o.node().innerHTML = '<path id="0" d="M 0 0 L 1 0"/>';
   }
   reset()
   function update() {
-    var g = origin.append("g").attr("id", id+1)
-    g.append("use").attr("xlink:href", "#" + id);
-    start = "rotate(0 " + [x,y] + ")", end = "rotate(90 " + [x,y] + ")";
-    rotate = g.append("g").attr("transform", start)
-    tween = function() {return d3.interpolateString(start,end)}
-    rotate.transition().duration(1200).attrTween("transform", tween);
-    console.log("transition from ", start, "to", end)
-    rotate.append("use").attr("xlink:href", "#" + id);
-    id++, _x = x+y, y = -x+y, x = _x;
+    if (id > 10) return;
+    if (id++ == -1) {
+      pd = "M 0 0 L " + x + " 0";
+      d3.select("path").transition().duration(d).attr("d", pd);
+      setTimeout(update, d);
+      return;
+    }
+    g = o.append("g").attr("id", id)
+    g.append("use").attr("xlink:href", "#" + (id-1));
+    a = "rotate(0 " + [x,y] + ")", b = "rotate(90 " + [x,y] + ")";
+    tween = function() {return d3.interpolateString(a,b)}
+    g.append("use").attr("xlink:href", "#" + (id-1))
+      .transition().duration(d).attrTween("transform", tween);
+    _x = x+y, y = -x+y, x = _x, s*=c, d *= ds;
+    setTimeout(update, d);
   }
+  update();
 
-  document.getElementById("update").onclick = update
-  document.getElementById("reset").onclick = reset
   </script>
 </body>
