--- a/use.html
+++ b/use.html
@@ -5,54 +5,35 @@
 <body>
   <style>
     #main {width: 1300px; height: 700px;}
-    path {stroke: black;}
+    path {stroke: inherit; stroke-width: 2px;}
   </style>
   <svg id="main">
-    <g id="o" transform="translate(700, 385)">
-      <path id="0" d="M 0 0 L 1 0"/>
+    <g id="origin" transform="translate(700, 385)">
+      <g id="o" >
+        <path id="0" d="M 0 0 L 1 0"/>
+      </g>
     </g>
   </svg>
   <script>
-  o = d3.select("#o"),x=9, y=0, id=0, d=400, ds=1.1;
+  n = d3.select("#o"),x=10, y=0, id=0, d=100, ds=1.1, o=d3.select("#origin");
+  cs = d3.scale.category10();
   pd = "M 0 0 L " + x + " 0";
   d3.select("path").transition().duration(d).attr("d", pd);
   setTimeout(update, d);
   function update() {
     if (id++ > 11) return;
-    g = o.append("g").attr("id", id)
-    g.append("use").attr("xlink:href", "#" + (id-1));
-    a = "rotateZ(0deg)", b = "rotateZ(90deg)";
+    _n = n.node();
+    n = o.append("g").attr("id", id);
+    n.node().appendChild(_n)
+    g = n.append("g")
+    clone = _n.cloneNode(true)
+    g.node().appendChild(clone);
+    a = "rotate(0 " + [x,y] + ")", b = "rotate(90 " + [x,y] + ")"
     tween = function() {return d3.interpolateString(a,b)}
-    g.append("use").attr("xlink:href", "#" + (id-1)).style("transform-origin", x + "px " + y + "px" )
-      .transition().duration(d).styleTween("transform", tween);
+    g.transition().duration(d).attrTween("transform", tween);
     _x = x+y, y = -x+y, x = _x, d = (d + 50) * ds;
+    g.style("stroke", cs(id));
     setTimeout(update, d);
   }
-  </script>
-  <script>
-    // function rot(xo_yo) {
-    //   var xo=xo_yo[0];
-    //   var yo=xo_yo[1];
-    //   return function(x_y) {
-    //     var x=x_y[0];
-    //     var y=x_y[1];
-    //     var xd = x - xo;
-    //     var yd = y - yo;
-    //     var xr = -yd;
-    //     var yr = xd;
-    //     return [xr + xo, yr + yo];
-    //   };
-    // };
-    // function extendSeq(seq) {
-    //   var rotator = rot(seq[seq.length-1]);
-    //   return seq.map(rotator);
-    // }
-    // var seqs = [[[1,0]]];
-    // for (var i=0; i<10; i++) {
-    //   seqs.push(extendSeq())
-    // }
-    // var s0 = [[1,0]];
-    // var s1 = extendSeq(s0);
-    // var s2 = extendSeq(s1);
   </script>
 </body>
