--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 </head>
 <body>
   <style>
-    #main {width: 1300px; height: 700px;}
+    #main {width: 100%; height: 100%; background-color: black;}
     path {stroke-width: 2px; stroke-linecap: square;}
+    body {margin: 0px;}
   </style>
   <svg id="main">
     <g id="xform" transform="translate(1000, 505)">
       <g id="origin">
-        <path d="M 0 0 L 1 0" style="stroke: black"/>
-        <!-- <circle cx="0" cy="10" r="1" fill="white"/> -->
+        <path d="M 0 0 L 1 0" style="stroke: white"/>
       </g>
     </g>
   </svg>
