--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <head>
   <meta charset="UTF-8">
   <script src="bower_components/d3/d3.js"></script>
+  <script>!function(){function t(t){return function(e,i){e=d3.hsl(e),i=d3.hsl(i);var r=(e.h+120)*a,h=(i.h+120)*a-r,s=e.s,l=i.s-s,o=e.l,u=i.l-o;return isNaN(l)&&(l=0,s=isNaN(s)?i.s:s),isNaN(h)&&(h=0,r=isNaN(r)?i.h:r),function(a){var e=r+h*a,i=Math.pow(o+u*a,t),c=(s+l*a)*i*(1-i);return"#"+n(i+c*(-.14861*Math.cos(e)+1.78277*Math.sin(e)))+n(i+c*(-.29227*Math.cos(e)-.90649*Math.sin(e)))+n(i+c*1.97294*Math.cos(e))}}}function n(t){var n=(t=0>=t?0:t>=1?255:0|255*t).toString(16);return 16>t?"0"+n:n}var a=Math.PI/180;d3.scale.cubehelix=function(){return d3.scale.linear().range([d3.hsl(300,.5,0),d3.hsl(-240,.5,1)]).interpolate(d3.interpolateCubehelix)},d3.interpolateCubehelix=t(1),d3.interpolateCubehelix.gamma=t}();</script>
 </head>
 <body>
   <style>
@@ -11,25 +12,30 @@
   <svg id="main">
     <g id="xform" transform="translate(1000, 505)">
       <g id="origin">
-        <path d="M 0 0 L 1 0" style="stroke: white"/>
+        <g id="start"><path id="p" d="M 0 0 L 1 0"/></g>
       </g>
     </g>
   </svg>
   <script>
-  x=10, y=0, id=1, d=1000, ds=1.1, o=d3.select("#origin");
-  cs = d3.scale.category10();
+  h=d3.hsl,cs = d3.scale.cubehelix().domain([0, 0.5, 1])
+    .range([h(-100, 0.75, 0.35),h(80,1.50,0.80),h(260, 0.75, 0.35)])
+  x=10, y=0, id=0, d=1000, ds=1.2, o=d3.select("#origin"), max=11;
   pd = "M 0 0 L " + x + " 0";
-  d3.select("path").transition().duration(d).attr("d", pd);
+  d3.select("#p").style("stroke", cs(0)).transition().duration(d).attr("d", pd);
   setTimeout(update, d);
   function update() {
-    if (id++ > 12) return;
+    if (id++ > max+1) return;
+    last = o.node().children[o.node().children.length-1]
+    last.style = "stroke: " + cs((id-1) / max)
+    Array.prototype.forEach.call(last.children, function(x) {x.style=""})
     clone = o.node().cloneNode(true)
-    Array.prototype.forEach.call(clone.children, function(x) {x.style=""})
     g=d3.select(o.node().appendChild(clone))
+    g.selectAll("g").transition().duration(d).style("stroke", cs(id/max))
     a = "rotate(0 " + [x,y] + ")", b = "rotate(90 " + [x,y] + ")"
     w = function() {return d3.interpolateString(a,b)}
-    g.style("stroke", cs(id-1))
-    g.transition().duration(d).attrTween("transform", w).style("stroke",cs(id));
+    // debugger;
+    // g.style("stroke", cs(id-1))
+    g.transition().duration(d).attrTween("transform", w)
     _x = x+y, y = -x+y, x = _x, d = (d + 50) * ds;
     setTimeout(update, d);
   }
