--- a/index.html
+++ b/index.html
@@ -10,26 +10,40 @@
     body {margin: 0px;}
   </style>
   <svg id="main">
-    <g id="xform" transform="translate(1000, 505)">
       <circle r="5" fill="white" />
       <g id="origin">
-        <g id="start"><path id="p" d="M 0 0 L 1 0"/></g>
+        <g id="start"><path d="M 500 500 L 510 500"/></g>
       </g>
-    </g>
   </svg>
   <script>
   next = false
+  len = 10
+  ox = 700, oy = 500, x = ox+len, y =oy
   h=d3.hsl,cs = d3.scale.cubehelix().domain([-0.2, 0.5, 1])
     .range([h(-100, 0.75, 0.35),h(80,1.50,0.80),h(260, 0.75, 0.35)])
-  x=10, y=0, id=0, d=100, ds=1.1, o=d3.select("#origin"), max=13;
-  pd = "M 0 0 L " + x + " 0";
-  d3.select("#p").style("stroke", cs(0)).transition().duration(d).attr("d", pd);
+  d = ["M",ox,oy,"L",x,y].join(" ")
+  p=d3.select("path").attr("d",d), r=p.node().getBoundingClientRect()
+
+  id=0, d=150, ds=1.1, o=d3.select("#origin"), max=13;
+  circle = d3.select("circle")
+  d3.select("#p").style("stroke", cs(0))//.transition().duration(d).attr("d", pd);
   setTimeout(update, d);
   function update() {
     id = (id + 1) % (max * 2);
-    console.log(id);
     a = "rotate(0 " + [x,y] + ")", b = "rotate(90 " + [x,y] + ")"
+    circle.attr("cx", x).attr("cy", y)
     w = function() {return d3.interpolateString(a,b)}
+    if (id == 0) {
+      ox = 700, oy = 500, x = ox+len, y =oy
+    } else if (id < max-1) {
+      _x = x+y-oy, y = ox-x+y, x = _x, d = (d) * ds;
+    } else if (id > max-1) {
+      y = (y+x)/2, x = x-y+oy
+    }
+    // if (id == 0) {
+    //   debugger;
+    // }
+    console.log(id);
     last = o.node().children[o.node().children.length-1]
     if (id < max) {
       last.style = "stroke: " + cs((id-1) / max)
@@ -38,18 +52,17 @@
       g=d3.select(o.node().appendChild(clone))
       g.selectAll("g").transition().duration(d).style("stroke", cs(id/max))
       g.transition().duration(d).attrTween("transform", w)
-      _x = x+y, y = -x+y, x = _x, d = (d) * ds;
+      console.log(x,y)
       setTimeout(update, d);
     } else {
-      if (next) next.remove()
-      y = (y+x)/2, x -= y
-      a = "rotate(0 " + [x,y] + ")", b = "rotate(90 " + [x,y] + ")"
-      w = function() {return d3.interpolateString(a,b)}
+      if (next) {next.remove()} else {d*=15}
       children = o.node().children, next = children[children.length-1]
+      reattach = o.node()
       o = o.append("g")
       while (children.length > 2) {
         o.node().appendChild(children[0])
       }
+      reattach.appendChild(circle.node())
       o.transition().duration(d).attrTween("transform", w)
       setTimeout(update, d);
     }
