--- a/index.html
+++ b/index.html
@@ -6,16 +6,12 @@
 <body>
   <style>
     #main {width: 100%; height: 100% ; background-color: black;}
-    path {stroke-width: 2px; stroke-linecap: round; fill: none;}
+    path {stroke-width: 1.5px; stroke-linecap: round; fill: none;}
     body {margin: 0px;}
   </style>
   <svg id="main">
     <g id="rescale" transform="scale(0,0) translate(0,0)">
-      <circle id="rotator" r="3" fill="white" style="display:none;"/>
-      <rect id="box" x="0" y="0" width="10" height="0" fill="grey" />
-      <rect id="margin" x="0" y="0" width="10" height="0" fill="aliceblue" />
-      <g id="origin">
-        <g id="start"><path d="M 0 0 L 0 0"/></g>
+      <g id="start">
       </g>
     </g>
   </svg>
@@ -24,11 +20,11 @@
   r =d3.select("svg").node().getBoundingClientRect();
   outerWidth= r.width
   outerHeight = r.height;
-  id=0, TRANSITION_DURATION=1000, ds=1.1, o=d3.select("#start"), NUM_STEPS=15;
+  step=0, TRANSITION_DURATION=1000, ds=1.1, o=d3.select("#start"), NUM_STEPS=14;
   STARTING_RATIO = 4;
   next = false
   len = 10
-  x=10, y=10
+  x=00, y=10
 
   function drawBox(seq) {
     var xs=seq.map(function(x){return x[0]}),ys=seq.map(function(x){return x[1]})
@@ -41,18 +37,9 @@
     var xt = (outerWidth - innerWidth * ratio)/(2*ratio)
     var yt = (outerHeight - innerHeight * ratio)/(2*ratio)
     s = d3.select("#rescale")
-    // if (ratio === STARTING_RATIO) return
     xform = "scale("+[ratio,ratio]+") translate(" + [-minx+xt,-miny+yt] + ")"
     s = s.transition().ease(d3.ease("cubic-in-out", 3)).duration(TRANSITION_DURATION)
     s.attr("transform", xform)
-    // d3.select("#box").attr({
-    //   width: b.maxx-b.minx,
-    //   height: b.maxy-b.miny,
-    //   x: b.minx,
-    //   y: b.miny
-    // })
-    // debugger;
-    // d3.select("#box").attr({x: b.minx, y: b.miny, height: b.maxy-b.miny, width: b.maxx-b.minx})
   }
 
   function rotate(vec, about){
@@ -60,58 +47,39 @@
     var y = vec[1]-about[1]
     return [about[0] - y, about[1] + x]
   }
-
+  function last(x) {return x[x.length-1]}
 
   var segments = [[[0,0], [x,y]]]
-  var total = segments[0]
+  var totals = segments.slice()
 
   function extend() {
-    function r(x) {
-      return rotate(x, total[total.length-1])
-    }
-    newS = total.map(r).reverse()
+    function r(x) { return rotate(x, last(last(totals))) }
+    var newS = last(totals).map(r).reverse()
     segments.push(newS)
-    total = total.concat(newS.slice(1))
+    var newT = last(totals).concat(newS.slice(1))
+    totals.push(newT)
   }
+  for (var i=0; i<NUM_STEPS; i++) {extend()}
 
-
-
-  rotatePt = [x,y]
-  h=d3.hsl,cs_ = d3.scale.cubehelix().domain([-0.2, 0.5, 1])
-    .range([h(-100, 0.75, 0.35),h(80,1.50,0.80),h(260, 0.75, 0.35)])
-  d = ["M 0 0 L",x,y].join(" ")
+  h=d3.hsl,cs_ = d3.scale.cubehelix().domain([-0.2, 0.5, 1]).range([h(-100, 0.75, 0.35),h(80,1.50,0.80),h(260, 0.75, 0.35)])
   function cs(x) {return cs_(x/NUM_STEPS)}
-  // p=d3.select("path").attr("d",d),
 
-  d3.select("path").style("stroke", cs(0)).transition().duration(TRANSITION_DURATION).attr("d", d);
-  setTimeout(update, TRANSITION_DURATION);
+  d = d3.svg.line()(totals[0])
+  o.append("path").attr("d", "M0,0").style("stroke", cs(0)).transition().duration(TRANSITION_DURATION).attr("d", d);
+  setTimeout(unfold1, TRANSITION_DURATION);
   clone = null;
-  function update() {
-    id++// = (id + 1) % (NUM_STEPS * 2);
-    if (id < NUM_STEPS) {
-      if (clone) {
-        extend();
-        pathd = d3.svg.line()(segments[segments.length-1])
-        clone.remove()
-        o.append("path").attr("d", pathd).style("stroke", cs(id-1))
-        debugger;
 
-      }
-      drawBox(total)
-      a = "rotate(0 " + rotatePt + ")", b = "rotate(90 " + rotatePt + ")"
-      rotator.attr("cx", rotatePt[0]).attr("cy", rotatePt[1])
-      w = function() {return d3.interpolateString(a,b)}
-      last = o.node().children[o.node().children.length-1]
-      rotatePt = rotate([0,0], rotatePt)
-      last.style = "stroke: " + cs((id-1))
-      Array.prototype.forEach.call(last.children, function(x) {x.style=""})
-      clone = o.node().cloneNode(true)
-      g=d3.select(o.node().appendChild(clone))
-      allChildren = g.selectAll("path");//d3.selectAll(g.node().children)
-      allChildren.transition().duration(TRANSITION_DURATION).style("stroke", cs(id))
-      g.transition().duration(TRANSITION_DURATION).attrTween("transform", w)
-      setTimeout(update, TRANSITION_DURATION);
-    } else {
+  function unfold1() {
+    step++
+    drawBox(totals[step])
+    rotatePt = last(totals[step-1])
+    a = "rotate(0 " + rotatePt + ")", b = "rotate(90 " + rotatePt + ")"
+    w = function() {return d3.interpolateString(a,b)}
+    clone = o.node().cloneNode(true)
+    g=d3.select(o.node().appendChild(clone))
+    g.selectAll("path").transition().duration(TRANSITION_DURATION).style("stroke", cs(step))
+    g.transition().duration(TRANSITION_DURATION).attrTween("transform", w)
+    setTimeout(unfold2, TRANSITION_DURATION);
       // if (next) {next.remove()} else {d*=15}
       // children = o.node().children, next = children[children.length-1]
       // reattach = o.node()
@@ -122,6 +90,14 @@
       // reattach.appendChild(rotator.node())
       // o.transition().duration(d).attrTween("transform", w)
       // setTimeout(update, d);
+  }
+
+  function unfold2() {
+    pathd = d3.svg.line()(segments[step])
+    clone.remove()
+    o.append("path").attr("d", pathd).style("stroke", cs(step))
+    if (step < NUM_STEPS) {
+      unfold1()
     }
   }
   </script>
