--- a/index.html
+++ b/index.html
@@ -86,6 +86,30 @@
     s.append("path").attr("d", pathd).style("stroke", cs(step))
     if (step < NUM_STEPS) {
       unfold1()
+    } else {
+      TRANSITION_DURATION = 3000
+      c=s
+      refold1()
+    }
+  }
+
+  function refold1() {
+    return;
+    step--
+    children = c.node().children
+    c = c.append("g")
+    rotatePt = last(totals[step])
+    a = "rotate(0 " + rotatePt + ")", b = "rotate(90 " + rotatePt + ")"
+    w = function() {return d3.interpolateString(a,b)}
+    while (children.length > 2) {c.node().appendChild(children[0])}
+    s.transition().duration(TRANSITION_DURATION).attr("transform", computeTransform(totals[step]))
+    c.transition().duration(TRANSITION_DURATION).attrTween("transform", w)
+    setTimeout(refold2, TRANSITION_DURATION)
+  }
+  function refold2() {
+    children[0].remove()
+    if (step > 0) {
+      refold1();
     }
   }
   </script>
